--- a/Lab 2 Perceptron/Readme
+++ b/Lab 2 Perceptron/Readme
@@ -1,1 +1,1 @@
-
+Task: Train a single-layer perceptron model to create a phish detector. You will use the Phishing Website dataset ( https://archive.ics.uci.edu/ml/datasets/phishing+websites ) for training and evaluating your model. The description of features can be found in the Data Folder. 
