--- a/Anomaly Detection in Network Traffic with K-means clustering/Readme
+++ b/Anomaly Detection in Network Traffic with K-means clustering/Readme
@@ -1,1 +1,15 @@
+Anomaly Detection in Network Traffic with K mean clustering
 
+Github
+
+https://github.com/nitinpathania007/Artificial-Intelligence-and-CyberSecurity/blob/master/Anomaly%20Detection%20in%20Network%20Traffic%20with%20K-means%20clustering/Anomaly_Detection_in_Network_Traffic_with_K_means_clustering_10%20percent.ipynb
+
+Google collab
+
+Full dataset
+
+https://colab.research.google.com/drive/1K0KCOWjeOFlWV6QnzADYrDa39H0zNKMI#scrollTo=ehvjI3CBG07w
+
+10 percent dataset
+
+https://colab.research.google.com/drive/1IY1_t4wMq4H8F7eZ3Y6PjSMJdE21GjU2
