--- a/Midterm Project/readme
+++ b/Midterm Project/readme
@@ -59,8 +59,8 @@ More information about them can be found on their GitHub: https://github.com/end
 
 The midterm is composed of three tasks: Making a deep neural network, deploying it to the cloud via Amazon SagaMaker, and creating a script for say a client to use to determine a single PE file (under 2MB) is malicious or benign. In this repository, putty.exe is used as the sample.
 
-Task 1: Completed. Can be found under midterm-nanci.pynb. The training pynb is as it sounds, it's the notebook full of hyperparameter tweaks and longer epochs.
+Task 1: Completed. 
 
-Task 2: Completed. Needed to be implemented for Task 3.
+Task 2: Completed.
 
-Task 3: Completed. Can be found in the subfolder midterm files.
+Task 3: Completed. 
