--- a/Final Project/readme
+++ b/Final Project/readme
@@ -4,19 +4,70 @@ https://www.youtube.com/watch?v=XSpcuAhaejY
 
 Fooling Machine Learning Image Classifier
 
-Why is machine learning exciting? That's because there's so much research going on in this field. There are new applications and new ideas, which crop up almost every day, and generative adversarial networks, or GANs, is one such new idea. This new type of machine learning system, which was invented in 2014, and it relies on two neural networks contesting in a game as adversaries. Each neural network tries to outdo the other, and GANs in this way can be used to generate realistic images and videos of virtually anything. It depends on what you train it to do. The term adversarial here refers to the fact that there are two neural networks involved, and they're contesting against one another as adversaries. The two neural networks have different objectives that are orthogonal to one another. The first neural network tries to generate realistic images and videos to fool the second neural network, and the objective of the second neural network is to not get fooled. This competition steadily improves the abilities of both of the networks involved, and the result is that the images and videos generated using this network are very, very realistic. 
+Why is machine learning exciting? That's because there's so much research going on in this field. 
+There are new applications and new ideas, which crop up almost every day, and generative adversarial networks, or GANs, is one 
+such new idea. This new type of machine learning system, which was invented in 2014, and it relies on two neural networks 
+contesting in a game as adversaries. Each neural network tries to outdo the other, and GANs in this way can be used to generate 
+realistic images and videos of virtually anything. It depends on what you train it to do. 
+The term adversarial here refers to the fact that there are two neural networks involved, and they're contesting against one 
+another as adversaries. The two neural networks have different objectives that are orthogonal to one another. 
+The first neural network tries to generate realistic images and videos to fool the second neural network, 
+and the objective of the second neural network is to not get fooled. This competition steadily 
+improves the abilities of both of the networks involved, and the result is that the images and 
+videos generated using this network are very, very realistic. 
 
-GANs are used in a variety of different applications today, AI-generated art, human image synthesis, generating 3D models from 2D images, improving the astronomical image, and also in traditional machine learning models, such as classification and regressions. GANs belong to a category of machine learning algorithms called generative models. GANs are used to generate new data which are realistic in nature. For example, traditional classification would be considered a discriminative model. Discriminative models try to discriminate between inputs or classify inputs into categories.
+GANs are used in a variety of different applications today, AI-generated art, human image synthesis, generating 3D models from 
+2D images, improving the astronomical image, and also in traditional machine learning models, 
+such as classification and regressions. GANs belong to a category of machine learning algorithms 
+called generative models. GANs are used to generate new data which are realistic in nature. 
+For example, traditional classification would be considered a discriminative model. 
+Discriminative models try to discriminate between inputs or classify inputs into categories.
 
-Generative adversarial networks are considered to be part of unsupervised learning. So when you're training you're GAN, you'll find that we won't feed in the labels for your training data. We'll only feed in the data itself. GAN models learn by self-identifying patterns and logical groupings that exist in the data itself without the help of labels. The first generative adversarial network was originally proposed and developed by Ian Goodfellow and a number of other researchers in the year 2014. Machine learning models and neural networks have, of course, been around for many years. GANs are a relatively new idea. GANs involve two neural networks competing in a game, and these two neural networks have specific names. We have a generated network, which is responsible for generating realistic data and a discriminative network, which is responsible for identifying real data from fake data. 
+Generative adversarial networks are considered to be part of unsupervised learning.
+So when you're training you're GAN, you'll find that we won't feed in the labels for your
+training data. We'll only feed in the data itself. GAN models learn by self-identifying patterns 
+and logical groupings that exist in the data itself without the help of labels.
+The first generative adversarial network was originally proposed and developed by Ian Goodfellow and 
+a number of other researchers in the year 2014. Machine learning models and neural networks have, 
+of course, been around for many years. GANs are a relatively new idea. GANs involve two neural 
+networks competing in a game, and these two neural networks have specific names. We have a generated
+network, which is responsible for generating realistic data and a discriminative network, which is 
+responsible for identifying real data from fake data. 
 
-The key to understanding how GANs work is understanding how these two networks compete against one another. The generative network, also called the generator, generates candidates of data that are as realistic as possible. The generative network is often compared to an art forger or a currency counterfeiter. The objective of the generator is to generate currency or art that is as realistic as possible and can fool experts. The kind of candidates that you want your generator to create depends on your training data. The expert that the generative network seeks to fool is the discriminative network. The discriminative network evaluates candidates. These candidates can be the fake data generated by the generative network or data from the real database. A common analogy for the discriminative network is that of a currency or art expert who can tell the difference between real notes and counterfeits or real art and fake art. So how are these neural networks set up, and how do they compete against one another? 
+The key to understanding how GANs work is understanding how these two networks compete against one another. 
+The generative network, also called the generator, generates candidates of data that are as realistic as possible. 
+The generative network is often compared to an art forger or a currency counterfeiter. 
+The objective of the generator is to generate currency or art that is as realistic as possible and can fool experts. 
+The kind of candidates that you want your generator to create depends on your training data. 
+The expert that the generative network seeks to fool is the discriminative network. 
+The discriminative network evaluates candidates. These candidates can be the fake data generated by 
+the generative network or data from the real database. A common analogy for the discriminative network 
+is that of a currency or art expert who can tell the difference between real notes and counterfeits or
+real art and fake art. So how are these neural networks set up, and how do they compete against one another? 
 
-Here is a big picture architecture diagram of the components involved in a generative adversarial network, the generator, as well as the discriminator. There seems to be lots of components here and lots of interconnections. Here is the generator network responsible for generating fake samples. You feed in some random latent noise into the generator. These noise variables serve as an input to this network. The generator uses this input to generate samples that are as realistic as possible. In addition to the fake samples generated by this generative network, we also need real data, or real samples. So you'll have a database of real-world images, and you'll use samples from this real-world database as well. Both the fake and the real data are then fed into the discriminative network. You can imagine that the discriminator acts as a classification algorithm, and it's responsible for identifying real data from fake data. The output of the discriminator is real or fake. Do these images or videos come from the real database, or are they fakes created by the generator network? The objective of the discriminator is to classify as many of the real samples as possible as real and fake samples as fake, and all of these components put together make up the big picture architectural overview of a generative adversarial network. 
+The big picture architecture diagram of the components involved in a generative adversarial network, 
+the generator, as well as the discriminator. There seems to be lots of components here and lots of interconnections.
+Here is the generator network responsible for generating fake samples. You feed in some random latent noise into the generator. 
+These noise variables serve as an input to this network. The generator uses this input to generate samples that are as realistic 
+as possible. In addition to the fake samples generated by this generative network, we also need real data, or real samples. 
+So you'll have a database of real-world images, and you'll use samples from this real-world database as well. 
+Both the fake and the real data are then fed into the discriminative network. You can imagine that the discriminator 
+acts as a classification algorithm, and it's responsible for identifying real data from fake data. The output of the
+discriminator is real or fake. Do these images or videos come from the real database, or are they fakes created by the
+generator network? The objective of the discriminator is to classify as many of the real samples as possible as real and
+fake samples as fake, and all of these components put together make up the big picture architectural overview of a generative 
+adversarial network. 
 
-I'll now quickly summarize what we know about the two neural networks involved in a GAN. A generator is responsible for generating data as realistically as possible, and we'll train the generator to generate data that is similar to the corpus of the real data that we have. The objective of the training process of the generator is to improve what it creates. The generator seeks to fool the discriminator. 
+I'll now quickly summarize what we know about the two neural networks involved in a GAN.
+A generator is responsible for generating data as realistically as possible, and we'll train the generator
+to generate data that is similar to the corpus of the real data that we have. The objective of the training 
+process of the generator is to improve what it creates. The generator seeks to fool the discriminator. 
 
-On the other hand, the discriminator or the discriminative network seeks to identify real data from fake data. The output of the discriminator is the probability that the data that is fed in is genuine. The training process of the discriminator classifies the output of the generator, as well as the real-world images, and the objective of the discriminator is to perform this classification as accurately as possible. And in this respect, this is just like a traditional classification model. 
+On the other hand, the discriminator or the discriminative network seeks to identify real data from fake data. 
+The output of the discriminator is the probability that the data that is fed in is genuine. The training process
+of the discriminator classifies the output of the generator, as well as the real-world images, and the objective 
+of the discriminator is to perform this classification as accurately as possible. And in this respect, this is just 
+like a traditional classification model. 
 
 Now the generator in order to create the realistic fake data needs some kind of input to work with, and which is where the noise that we feed into a GAN comes in. When building and training our GAN model we'll use a function that generates noise. The corpus of data that we use to train this network, that is the training data, is composed of real data points, as well as the noise function, real images, as well as noise.
 
@@ -46,4 +97,4 @@ Training the Discriminator
 The loss function that we'll use to train our GAN model is binary cross-entropy, or bce_loss. This is a special case of the categorical cross-entropic loss, which is commonly used in classification models. Cross entropy measures the distance between two probability distributions, and the output of classification models are probability scores. As its name implies, the binary cross-entropy loss is often used when we classify the output into two categories, and that's the case here. We want the discriminator to classify the input images as real or fake. That is a binary classification problem. The bce_loss resembles the log loss for both the generator as well as the discriminator, and the log loss is preferred in GAN models because the log loss highly penalizes classifiers that are confident about an incorrect classification. In order to train both the discriminator and the generator model, we'll use the Adam optimizer. Assign total_step to the number of batches for which we'll run training in a single ephoch. This is equal to the length of the data_loader. I'll now set up a for loop to run through each epoch of training. We'll run training or a total of 100 epochs. This is something that you can, of course, change and see how your model improves. For each epoch, we'll iterate over all of the batches of images in the training data. We are not really interested in the labels corresponding to the images here because this is not a classification model. We're only interested in the images themselves. For each batch of image data, we'll flatten the images such that they are 1D vectors. The original images are 28 by 28. This reshape operation will create a single dimensional vector for each image. Flattening these images will allow us to feed these images into the input Linear layer of our discriminator model. You also need to ensure that you copy over your image parameters to the GPU because that where we are running training. We need to have labels for the discriminator marking the input images as real images or fake images. Labels for the real data are all ones. We'll instantiate a torch tensor equal to the batch_size where all of the tensor values are ones. The labels for the fake data are all zeros. We'll use torch.zeros to instantiate a torch tensor of all zeros equal to the batch_size once again. Now using the current weights of the discriminator, we'll make a forward pass and pass these real images through the discriminator network. The output of the discriminator will be probability scores that we'll store in the outputs variable. We'll then apply the binary cross-entropy loss function to compare the output of the discriminator with the real_labels. We use the real_labels here because all of these images are real images that we've passed in through the discriminator. We'll now store the outputs of the discriminator for the real images in the real_score variable. We'll now initialize z, which is the noise input of latent_size that we'll feed into our generator network, and we'll copy over this noise to our cuda device. We'll pass these noise images into our generator model to have our generator generate fake_images. And for the current model parameters of the discriminator, we'll pass these fake_images into the discriminator as well and get the probability scores, which we'll store in the outputs variable. We'll now compare the output of the discriminator for the fake_images with the fake_labels. Remember, the fake_labels are all zeros, and we'll calculate the bce_loss. I'll now store the output of the discriminator on the fake_images in the fake_score variable. We'll now calculate the total loss by summing up the loss on the real, as well as the fake_images. Let's zero out the gradients of both the optimizer, the discriminator optimizer, as well as the generator optimizer, and we are now ready to make a backward pass through our model to calculate gradients. We calculate gradients with respect to the total loss and call d_optimizer.step. At this point, we've updated the model parameters for only the discriminator. We've made a forward pass through the discriminator with the real, as well as fake_images then made a backward pass to calculate gradients with respect to the total_loss and updated only the discriminators parameters.
 
 Training the Generator and Generating Fake Images
-In the last clip, we saw how we train the model parameters of the discriminator. In this clip, we'll train the generator, which'll generate fake_images. We'll generate noise variables with dimensionality latent_size and copy these noise variables over to the cuda device. Our generator will map these input noise vectors to an output in the desired space, the space of MNIST handwritten digits. We'll pass these noise variables through the generator and generate fake_images. We'll then pass these fake_images through the discriminator to see what the discriminator makes of them. The resulting output of the discriminator will be stored in the outputs variable. The objective of the generator model, as we know, is to generate fakes that fool that discriminator, which means when we calculate the generator loss, the generator network will try and get the discriminator to classify these fake_images as real. So the bce_loss will be calculated using the outputs of the discriminator on the fake data and the real_lables. Minimizing this loss function will allow the generator to generate fakes that will fool the discriminator into thinking these are real images. Note that in this loss function, we compare the output of the discriminator on the fake images with the real_labels. Zero out the gradients of both optimizers, the generator, as well as the discriminator, and go ahead and make a backward pass through the generator network with respect to the generator loss. Then call g_optimizer.step to update the model parameters of the generator network. and every 200 epochs, we'll print out a bunch of information, the discriminator loss, generator loss, etc., to screen to see how the training is progressing. The value in the fake_images variable is the final set of fake_images created by our generator model. This is the last set of fake_images after we've trained for 100 epochs. I'm going to reshape this tensor so that it's a batch of 28 by 28 grayscale images. We can then visualize these images and see what the generated images look like. Go ahead and hit Shift+Enter on this code cell, and we'll start training our GAN model. This training ran for about 10 to 15 minutes on the GPU, so it takes a while. Once training has run through for 100 epochs, let's make a grid of the fake_images generated by our generator network. I'll now convert these to a format that can be displayed in matplotlib, and we'll display this grid of generated images using plt.imshow, and here are the handwritten digits generated by our generator neural network. You can see that they are very close to the real dataset. I can see sevens, twos, nines, threes, all digits that could be from the real dataset. It's pretty amazing how real these fake images are.
+In the last clip, we saw how we train the model parameters of the discriminator. We'll train the generator, which'll generate fake_images. We'll generate noise variables with dimensionality latent_size and copy these noise variables over to the cuda device. Our generator will map these input noise vectors to an output in the desired space, the space of MNIST handwritten digits. We'll pass these noise variables through the generator and generate fake_images. We'll then pass these fake_images through the discriminator to see what the discriminator makes of them. The resulting output of the discriminator will be stored in the outputs variable. The objective of the generator model, as we know, is to generate fakes that fool that discriminator, which means when we calculate the generator loss, the generator network will try and get the discriminator to classify these fake_images as real. So the bce_loss will be calculated using the outputs of the discriminator on the fake data and the real_lables. Minimizing this loss function will allow the generator to generate fakes that will fool the discriminator into thinking these are real images. Note that in this loss function, we compare the output of the discriminator on the fake images with the real_labels. Zero out the gradients of both optimizers, the generator, as well as the discriminator, and go ahead and make a backward pass through the generator network with respect to the generator loss. Then call g_optimizer.step to update the model parameters of the generator network. and every 200 epochs, we'll print out a bunch of information, the discriminator loss, generator loss, etc., to screen to see how the training is progressing. The value in the fake_images variable is the final set of fake_images created by our generator model. This is the last set of fake_images after we've trained for 100 epochs. I'm going to reshape this tensor so that it's a batch of 28 by 28 grayscale images. We can then visualize these images and see what the generated images look like. Go ahead and hit Shift+Enter on this code cell, and we'll start training our GAN model. This training ran for about 10 to 15 minutes on the GPU, so it takes a while. Once training has run through for 100 epochs, let's make a grid of the fake_images generated by our generator network. I'll now convert these to a format that can be displayed in matplotlib, and we'll display this grid of generated images using plt.imshow, and here are the handwritten digits generated by our generator neural network. You can see that they are very close to the real dataset. I can see sevens, twos, nines, threes, all digits that could be from the real dataset. It's pretty amazing how real these fake images are.
