--- a/Final Project/readme
+++ b/Final Project/readme
@@ -2,7 +2,7 @@
 Youtube Video Link
 https://www.youtube.com/watch?v=XSpcuAhaejY
 
-Fooling Machine Learning Image Classifier
+##Fooling Machine Learning Image Classifier
 
 Why is machine learning exciting? That's because there's so much research going on in this field. 
 There are new applications and new ideas, which crop up almost every day, and generative adversarial networks, or GANs, is one 
