--- a/Final Project/readme
+++ b/Final Project/readme
@@ -16,6 +16,12 @@ and the objective of the second neural network is to not get fooled. This compet
 improves the abilities of both of the networks involved, and the result is that the images and 
 videos generated using this network are very, very realistic. 
 
+
+Image classifier implementation is hsown here.
+https://github.com/nitinpathania007/Artificial-Intelligence/blob/master/Final_Project/readme
+
+Generative Adversarial Networks:
+
 GANs are used in a variety of different applications today, AI-generated art, human image synthesis, generating 3D models from 
 2D images, improving the astronomical image, and also in traditional machine learning models, 
 such as classification and regressions. GANs belong to a category of machine learning algorithms 
