--- a/Final Project/readme
+++ b/Final Project/readme
@@ -17,7 +17,7 @@ improves the abilities of both of the networks involved, and the result is that 
 videos generated using this network are very, very realistic. 
 
 
-Image classifier implementation is hsown here.
+Image classifier implementation is shown here.
 https://github.com/nitinpathania007/Artificial-Intelligence/blob/master/Final_Project/readme
 
 Generative Adversarial Networks:
